# caixa_scanner

./: .env.example  .gitignore  README.md  STREAMLIT_COMMUNITY_CLOUD.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/caixa_scanner/: config.py  database.py  main.py  models.py  pipeline.py  repository.py  schemas.py  telegram.py  utils.py
src/caixa_scanner/dashboard/: __init__.py  app.py
src/caixa_scanner/sources/: caixa_csv.py  caixa_detail.py  caixa_edital.py
src/caixa_scanner/valuation/: location_scoring.py  scoring.py  scoring_moradia.py
tests/: test_caixa_detail.py  test_caixa_edital.py  test_csv_source.py  test_database.py  test_main_cli.py  test_pipeline.py  test_repository.py  test_scoring.py  test_scoring_moradia.py
